# alphalith

./: .gitignore  DATASOURCES.md  README.md  README_CN.md  TEST_SIGNALS.md  pyproject.toml
alphalith/: __init__.py  __main__.py  agents.py  alerts.py  backtest.py  block_trade.py  cli.py  core.py  dashboard.py  data.py  dragon.py  em.py  financial.py  financial_us.py  hotboard.py  html_report.py  journal.py  llm.py  market.py  northbound.py  options.py  portfolio.py  reddit.py  report.py  schema.py  sentiment.py  signal_score.py  unlock.py  watchlist.py  xueqiu.py
alphalith/gui/: __init__.py  app.html
alphalith/rules/: __init__.py
docs/: CLI.md
examples/: 01_quick_start.py
tests/: test_new_datasources.py  test_smoke.py
