[project]
name = "alphalith"
version = "0.1.0"
description = "AI 投研委员会 · 多智能体 LLM 投资决策框架（A股/港股/美股）"
authors = [{ name = "Alphalith Project" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["ai", "trading", "stock", "multi-agent", "llm", "a-share", "hk-stock", "us-stock"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.optional-dependencies]
data = ["akshare>=1.16.0", "yfinance>=0.2.40"]
deepseek = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.30.0"]
qwen = ["dashscope>=1.14.0"]
ollama = ["ollama>=0.3.0"]
all = [
    "akshare>=1.16.0",
    "yfinance>=0.2.40",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "dashscope>=1.14.0",
    "ollama>=0.3.0",
]

[project.scripts]
alphalith = "alphalith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alphalith"]
